--- a/C_5026201131_A.html
+++ b/C_5026201131_A.html
@@ -164,8 +164,8 @@
 </head>
 
 <body>
-    <div class="container-fluid pb">
-        <p>Fidela Nathania <br> Fidel <br> 5026201131</p>
+    <div class="container-fluid pb-5">
+        <p>Fidela Nathania <br>Fidel <br>5026201131</p>
         <h2 class="title py-2" style="text-align: center;">Form Pendaftaran Kuota Online</h2>
         <form class="needs-validation" name="myForm" id="myForm" action="/action_page.php" onsubmit="return registration()" method="post" novalidate>
             <ul>
